[gd_scene load_steps=3 format=2]

[ext_resource path="res://GameModels/Hazards/Enemy Spawner.gd" type="Script" id=1]

[sub_resource type="CylinderShape" id=1]
radius = 3.0
height = 0.4

[node name="EnemySpawner" type="Spatial"]
script = ExtResource( 1 )

[node name="Position3D" type="Position3D" parent="."]

[node name="Timer" type="Timer" parent="."]

[node name="Area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 1 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_shape_entered" from="Area" to="." method="_on_Area_body_shape_entered"]
